# CSCI-E25

./: pyproject.toml
Labs/: 10_HomographyProjections.ipynb  10_ImageStitching.ipynb  10_ObjectDetection.ipynb  11_IntroductionToDDIMs.ipynb  11_IntroductionToDDMs.ipynb  11_IntroductionToGANs.ipynb  11_Monocular_Depth_Estimation.ipynb  12_OpticalFlow.ipynb  13_SemanticSegmentation.ipynb  14_DisparityEstimation.ipynb  1_WorkingWithImageData.ipynb  2_FilteringImages.ipynb  3_Features.ipynb  3_IntroToDeepForwardNetworksForCV.ipynb  4B_TransferLearningDataAugmentation.ipynb  4_IntroToCovNetsForCV.ipynb  4_IntroductionToMachineLearning.ipynb  4_IntroductionToMachineLearningForCV.ipynb  5_Image_Classification_with_Vision_Transformer.ipynb  5_IntrotoDeepForwardNetworks.ipynb  5_IntrotoDeepForwardNetworksForCV.ipynb  6_Autoencoder_Image_Captioning.ipynb  6_IntroToCovNets.ipynb  6_IntroToCovNetsForCV.ipynb  6_IntroToCovNetsForCV_solutions.ipynb  7_CV_TransferLearning.ipynb  7_IntroToRegularizationOptimizaton.ipynb  7_IntroductionToDDIMs.ipynb  7_TransferLearning.ipynb  8_HomographyProjections.ipynb  8_ObjectDection.ipynb  8_ObjectDetection.ipynb  9_HomographyProjections.ipynb  9_ImageStitching.ipynb  9_SemanticSegmentation.ipynb
Slides/: 1_Introduction.pptx  2_ConvolutionFilterig.pptx  3_BuildingBlocksOfDeepLearning.pptx  4_MachineLearningForCV.pptx  5_BuildingBlocksOfDeepLearning.pptx  6_ConvolutionalNNs.pptx  7_AttentionTransformers.pptx  7_RegularizationAndOptimization.pptx  8_HomographyProjection.pptx  9_HomographyProjection.pptx  Attention_Transformers.pptx
(+33 files in other folders)
